grim-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grim-app
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grim-app
  template:
    metadata:
      labels:
        app: grim-app
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      containers:
        - name: backend
          image: ghcr.io/lowjungxuandev/grim/backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
